--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "16.8.6",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "16.8.6",
+    "react-ga": "^3.2.0",
     "react-notify-toast": "^0.5.1",
     "react-paginate": "^6.5.0",
     "react-slick": "^0.27.11",
