--- a/now.json
+++ b/now.json
@@ -92,6 +92,14 @@
              "Access-Control-Allow-Methods": "GET",
             "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
         },
+        "src": "/error/item-gambar/([^/]+)",
+        "dest": "/server.js"
+    },{
+        "headers": {
+            "Access-Control-Allow-Origin": "*",
+             "Access-Control-Allow-Methods": "GET",
+            "Access-Control-Allow-Headers": "X-Requested-With, Content-Type, Accept"
+        },
         "src": "/api/caridata/([^/]+)",
         "dest": "/server.js"
     },{
