--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
     "scripts": {
         "dev": "next",
         "build": "next build",
-        "preexport": "npm run build",
-        "export": "next export",
-        "prestart": "npm run export",
-        "start": "serve out"
+        "start": "next start"
     },
     "license": "ISC",
     "dependencies": {
